# async-fastapi-sqlalchemy-template

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
app/: config.py  config_celery.py  exceptions.py  main.py  repository.py  router.py  schema.py  utils.py
app/cli/: main.py  validate.py
app/database/: core.py  dependencies.py  models.py
app/database/migrations/: README.md  env.py
app/database/migrations/versions/: 2025-01-27_add_user_7870b1d3592e.py  2025-02-07_add_celery_tables_00c359f48810.py
app/email/: main.py  utils.py
app/email/templates/src/: new_account.mjml
app/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schema.py  service.py  tasks.py  utils.py
app/users/routes/: auth.py  superusers.py  users.py
tests/: conftest.py  database.py  factory.py
tests/app/: test_repository.py
tests/app/users/: test_user_service.py
tests/app/users/routes/: test_auth.py  test_superusers.py  test_users.py
tests/utils/: headers.py
